--- a/recall/src/app/alumni/givingtous/givingtous.component.css
+++ b/recall/src/app/alumni/givingtous/givingtous.component.css
@@ -38,12 +38,7 @@
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
-.tab-content{
-    padding: 10px;
-}
-.tabs{
-    background-color: grey;
-}
+
 
 .eventsDiv{
     display: inline-grid;
@@ -223,105 +218,105 @@ button:focus{
         background-color: grey;
     }
 
+  
 
 
+input[name="tabs"] {
+  display: none;
+}
+input[name="tabs"]#tab-1:checked ~ .content .tab:nth-of-type(1) {
+  display: inline-block;
+}
+input[name="tabs"]#tab-1:checked ~ .tabs label:nth-child(1) {
+  color: white;
+  background-color: #00317f;
+}
+input[name="tabs"]#tab-1:checked ~ .tabs label:nth-child(1):after {
+  width: calc(100% - 40px);
+  transition: .3s;
+}
+input[name="tabs"]#tab-2:checked ~ .content .tab:nth-of-type(2) {
+  display: inline-block;
+ 
+}
+input[name="tabs"]#tab-2:checked ~ .tabs label:nth-child(2) {
+  color: white;
+  background-color: #00317f;
+}
+input[name="tabs"]#tab-2:checked ~ .tabs label:nth-child(2):after {
+  width: calc(100% - 40px);
+  transition: .3s;
+}
+input[name="tabs"]#tab-3:checked ~ .content .tab:nth-of-type(3) {
+  display: inline-block;
+}
+input[name="tabs"]#tab-3:checked ~ .tabs label:nth-child(3) {
+  color: white;
+  background-color: #00317f;
+}
+input[name="tabs"]#tab-3:checked ~ .tabs label:nth-child(3):after {
+  width: calc(100% - 40px);
+  transition: .3s;
+}
+
+.tabs {
+  overflow-X: auto;
+  -webkit-overflow-scrolling: touch;
+  position: relative;
+  white-space: nowrap;
+  -webkit-transition: left 0.3s ease-out;
+  transition: left 0.3s ease-out;
+}
+.tabs label {
+  display: inline-block;
+  padding: 10px;
+  position: relative;
+  color: black;
+  font-weight: 700;
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  cursor: pointer;
+  width: calc(100% /3);
+    text-align: center;
+    margin: 0;
+    border-bottom: 1px solid #00317f;
+}
 
 
-    html, body {
-        width: 100%;
-      }
-      
-      .top1 {
-        padding: 40px 0 0 0;
-        margin-bottom: 50px;
-      }
-      
-      label, p, a, h1, div {
-        font-family: Roboto, sans-serif;
-      }
-      
-      .tab-wrap {
-        position: relative;
-        display: -webkit-box;
-        display: flex;
-      }
-      
-      input[type="radio"][name="tabs"] {
-        position: absolute;
-        z-index: -1;
-      }
-      input[type="radio"][name="tabs"]:checked + .tab-label-content label {
-        color: #003152;
-      }
-      input[type="radio"][name="tabs"]:checked + .tab-label-content .tab-content {
-        display: block;
-      }
-      input[type="radio"][name="tabs"]:nth-of-type(1):checked ~ .slide {
-        left: calc((100% / 3) * 0);
-      }
-      input[type="radio"][name="tabs"]:nth-of-type(2):checked ~ .slide {
-        left: calc((100% / 3) * 1);
-      }
-      input[type="radio"][name="tabs"]:nth-of-type(3):checked ~ .slide {
-        left: calc((100% / 3) * 2);
-      }
-      input[type="radio"][name="tabs"]:nth-of-type(4):checked ~ .slide {
-        left: calc((100% / 4) * 3);
-      }
-      input[type="radio"][name="tabs"]:first-of-type:checked ~ .slide {
-        left: 0;
-      }
-      
-      label {
-        cursor: pointer;
-        color: grey;
-        font-size: 18px;
-        box-sizing: border-box;
-        display: -webkit-inline-box;
-        display: inline-flex;
-        -webkit-box-align: center;
-                align-items: center;
-        -webkit-box-pack: center;
-                justify-content: center;
-        text-align: center;
-        height: 50px;
-        -webkit-transition: color 0.2s ease;
-        transition: color 0.2s ease;
-        width: 100%;
-      }
-      
-      .slide {
-        background: #DC143C;
-        width: calc(100% / 3);
-        height: 4px;
-        position: absolute;
-        left: 0;
-        top: calc(100% - 4px);
-        -webkit-transition: left 0.3s ease-out;
-        transition: left 0.3s ease-out;
-      }
-      
-      .tab-label-content {
-        width: 100%;
-      }
-      .tab-label-content .tab-content {
-        position: absolute;
-        top: 100px;
-        left: 16px;
-        line-height: 130%;
-        display: none;
-      }
-      
-      /* @media screen and (max-width: 800px) {
-        h1 {
-          padding: 40px 0 90px 10%;
-        }
-      
-        .tab-wrap {
-          width: 80%;
-          margin-left: 10%;
-          top: -106px;
-        }
-      } */
+.container-tabs {
+    padding: 0;
+  background: #FFF;
+  width: 100%;
+  overflow: hidden;
+}
+.container-tabs .tab {
+  display: none;
+  padding: 0 20px;
+}
+input[type="radio"][name="tabs"]:nth-of-type(1):checked ~ .slide {
+    left: calc((100% / 3) * 0);
+  }
+  input[type="radio"][name="tabs"]:nth-of-type(2):checked ~ .slide {
+    left: calc((100% / 3) * 1);
+  }
+  input[type="radio"][name="tabs"]:nth-of-type(3):checked ~ .slide {
+    left: calc((100% / 3) * 2);
+  }
+  input[type="radio"][name="tabs"]:first-of-type:checked ~ .slide {
+    left: 0;
+  }
 
-      
+.slide {
+    background: #dc143c;
+    width: calc(100% / 3);
+    height: 2px;
+    position: relative;
+    left: 0;
+    top: calc(100% - 4px);
+    -webkit-transition: left 0.3s ease-out;
+    transition: left 0.3s ease-out;
+  }
+  .tab-content{
+      padding-top: 10px;
+  }
